--- a/app/globals.css
+++ b/app/globals.css
@@ -128,3 +128,17 @@ input[type="number"] {
 docuseal-builder {
   height: unset !important;
 }
+
+.bg-gradient {
+  background-color: rgb(30, 59, 138);
+  background-image: radial-gradient(
+      at 27% 59%,
+      rgb(79, 70, 229) 0,
+      transparent 40%
+    ),
+    radial-gradient(at 41% 74%, rgb(35, 93, 186) 0, transparent 73%),
+    radial-gradient(at 42% 40%, rgb(17, 24, 39) 0, transparent 41%),
+    radial-gradient(at 68% 51%, rgb(21, 94, 117) 0, transparent 54%),
+    radial-gradient(at 5% 61%, rgb(91, 33, 182) 0, transparent 47%),
+    radial-gradient(at 96% 76%, rgb(30, 58, 138) 0, transparent 74%);
+}
