--- a/components/shared/rich-editor/rich-editor.css
+++ b/components/shared/rich-editor/rich-editor.css
@@ -26,7 +26,7 @@
 }
 .readOnly-quillWrapper > .quill > .ql-disabled > .ql-editor {
   padding: 0px;
-  font-size: 14px;
+  font-size: 16px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -34,6 +34,11 @@
   -webkit-box-orient: vertical;
 }
 
+@media only screen and (max-width: 768px) {
+  .readOnly-quillWrapper > .quill > .ql-disabled > .ql-editor {
+    font-size: 14px;
+  }
+}
 .quillWrapper > .quill > .ql-container > .ql-editor.ql-blank::before {
   color: hsl(215.4 16.3% 46.9%);
   font-style: normal;
