--- a/app/(protected)/event/[slug]/_components/event-schedule/event-schedule.css
+++ b/app/(protected)/event/[slug]/_components/event-schedule/event-schedule.css
@@ -52,7 +52,7 @@
 }
 
 .fc-v-event {
-  border: none !important;
+  border: 1px solid #fff !important;
   box-shadow: none !important;
   padding: 5px !important;
 }
