highlight the days with itinerary

--- a/app/(protected)/event/[slug]/_components/event-schedule/event-schedule.css
+++ b/app/(protected)/event/[slug]/_components/event-schedule/event-schedule.css
@@ -16,6 +16,9 @@
   line-height: 1.5rem !important;
   font-weight: 600 !important;
 }
+.fc-scrollgrid-sync-inner {
+  position: relative;
+}
 
 .fc-button-primary {
   background-color: hsl(var(--primary)) !important;
