--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,7 @@
     --destructive-foreground: 210 40% 98%;
 
     --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%; /* #1e293b */    
+    --input: 217.2 32.6% 17.5%; /* #1e293b */
     --ring: 212.7 26.8% 83.9%;
   }
 }
@@ -143,4 +143,11 @@ docuseal-builder {
     radial-gradient(at 68% 51%, rgb(21, 94, 117) 0, transparent 54%),
     radial-gradient(at 5% 61%, rgb(91, 33, 182) 0, transparent 47%),
     radial-gradient(at 96% 76%, rgb(30, 58, 138) 0, transparent 74%);
+}
+
+@media (min-width: 768px) {
+  .md-bg-gradient-hidden {
+    background-color: transparent;
+    background-image: none;
+  }
 }
